--- a/style.css
+++ b/style.css
@@ -20,3 +20,28 @@
 h1{
     color:white;
 }
+.alert{
+    display:none;
+}
+#alert-danger{
+    width:90%;
+    border:1px solid black;
+    background-color: rgb(233, 176, 176);
+    color:rgb(81, 1, 1);
+    box-sizing: border-box;
+    margin-top:10px;
+    border-radius: 12px;
+    padding:16px 30px;
+    font-size: 18px;
+}
+#alert-success{
+    width:90%;
+    border:1px solid black;
+    background-color: rgb(3, 44, 13);
+    color:rgb(88, 220, 86);
+    box-sizing: border-box;
+    margin-top:10px;
+    border-radius: 12px;
+    padding:16px 30px;
+    font-size: 18px;
+}
